--- a/DataJoinerEast.ipynb
+++ b/DataJoinerEast.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,17 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "btax = pd.DataFrame(columns=[\"Year\", \"New York\", \"Philadelphia\"])\n",
-    "food = pd.DataFrame(columns=[\"Year\", \"Food Expenditures\"])"
+    "food = pd.DataFrame(columns=[\"Year\", \"New York\", \"Philadelphia\"])\n",
+    "education = pd.DataFrame(columns=[\"Year\", \"Education Expenditures\"])\n",
+    "alcohol = pd.DataFrame(columns=[\"Year\", \"New York\", \"Philadelphia\"])\n",
+    "average_expenditures = pd.DataFrame(columns=[\"Year\", \"New York\", \"Philadelphia\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -78,49 +81,56 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Food Expenditures</th>\n",
+       "      <th>New York</th>\n",
+       "      <th>Philadelphia</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Year</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2004</th>\n",
-       "      <td>6430.0</td>\n",
+       "      <td>54121.0</td>\n",
+       "      <td>47289.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2005</th>\n",
-       "      <td>6357.0</td>\n",
+       "      <td>55137.0</td>\n",
+       "      <td>45922.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006</th>\n",
-       "      <td>6320.0</td>\n",
+       "      <td>56683.0</td>\n",
+       "      <td>48649.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2007</th>\n",
-       "      <td>6688.0</td>\n",
+       "      <td>59185.0</td>\n",
+       "      <td>55706.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2008</th>\n",
-       "      <td>6967.0</td>\n",
+       "      <td>60273.0</td>\n",
+       "      <td>56790.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Food Expenditures\n",
-       "Year                   \n",
-       "2004             6430.0\n",
-       "2005             6357.0\n",
-       "2006             6320.0\n",
-       "2007             6688.0\n",
-       "2008             6967.0"
+       "      New York  Philadelphia\n",
+       "Year                        \n",
+       "2004   54121.0       47289.0\n",
+       "2005   55137.0       45922.0\n",
+       "2006   56683.0       48649.0\n",
+       "2007   59185.0       55706.0\n",
+       "2008   60273.0       56790.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,21 +140,30 @@
     "for df in dfs:\n",
     "    btax = btax.append({ \"Year\": str(itr), \"New York\": df.iloc[1, 1], \"Philadelphia\": df.iloc[1, 2] }, ignore_index=True)\n",
     "    food = food.append({ \"Year\": str(itr), \\\n",
-    "        \"Food Expenditures\": df.iloc[10, 0]}, ignore_index=True)\n",
+    "        \"New York\": df.iloc[10, 1], \"Philadelphia\": df.iloc[10, 2]}, ignore_index=True)\n",
+    "    education = education.append({ \"Year\": str(itr),\\\n",
+    "        \"New York\": df.iloc[38, 1],\\\n",
+    "        \"Philadelphia\": df.iloc[38, 2] }, ignore_index=True)\n",
+    "    alcohol = alcohol.append({ \"Year\": str(itr), \\\n",
+    "        \"New York\": df.iloc[18, 1], \"Philadelphia\": df.iloc[18, 2]}, ignore_index=True)\n",
+    "    average_expenditures = average_expenditures.append({ \"Year\": str(itr), \\\n",
+    "        \"New York\": df.iloc[9, 1], \"Philadelphia\": df.iloc[9, 2]}, ignore_index=True)\n",
     "    itr += 1\n",
     "btax = btax.set_index(\"Year\", drop=True)\n",
     "food = food.set_index(\"Year\", drop=True)\n",
-    "\n",
-    "food.head()"
+    "education = education.set_index(\"Year\", drop=True)\n",
+    "alcohol = alcohol.set_index(\"Year\", drop=True)\n",
+    "average_expenditures = average_expenditures.set_index(\"Year\", drop=True)\n",
+    "average_expenditures.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "food.to_csv(\"./data/food_ne.csv\", sep='\\t')"
+    "average_expenditures.to_csv(\"./data/average_expenditures_northeast.csv\", sep='\\t')"
    ]
   },
   {
