--- a/data_joiner.ipynb
+++ b/data_joiner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,13 +64,15 @@
     "ageref = pd.DataFrame(columns=[\"Year\", \"Los Angeles\", \"San Francisco\", \"San Diego\", \"Seattle\", \"Phoenix\"])\n",
     "persons = pd.DataFrame(columns=[\"Year\", \"Item\", \"Los Angeles\", \"San Francisco\", \"San Diego\", \"Seattle\", \"Phoenix\"])\n",
     "under18 = pd.DataFrame(columns=[\"Year\", \"Item\", \"Los Angeles\", \"San Francisco\", \"San Diego\", \"Seattle\", \"Phoenix\"])\n",
-    "food = pd.DataFrame(columns=[\"Year\", \"Food Expenditures\"])\n",
-    "education = pd.DataFrame(columns=[\"Year\", \"Education Expenditures\"])"
+    "food = pd.DataFrame(columns=[\"Year\", \"Los Angeles\", \"San Francisco\"])\n",
+    "education = pd.DataFrame(columns=[\"Year\", \"Los Angeles\", \"San Francisco\"])\n",
+    "alcohol = pd.DataFrame(columns=[\"Year\", \"Los Angeles\", \"San Francisco\"])\n",
+    "average_expenditures = pd.DataFrame(columns=[\"Year\", \"Los Angeles\", \"San Francisco\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -94,49 +96,56 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Education Expenditures</th>\n",
+       "      <th>Los Angeles</th>\n",
+       "      <th>San Francisco</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Year</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2004</th>\n",
-       "      <td>1039.0</td>\n",
+       "      <td>55760.0</td>\n",
+       "      <td>60992.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2005</th>\n",
-       "      <td>937.0</td>\n",
+       "      <td>58404.0</td>\n",
+       "      <td>66344.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006</th>\n",
-       "      <td>894.0</td>\n",
+       "      <td>60932.0</td>\n",
+       "      <td>69559.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2007</th>\n",
-       "      <td>937.0</td>\n",
+       "      <td>58404.0</td>\n",
+       "      <td>66344.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2008</th>\n",
-       "      <td>960.0</td>\n",
+       "      <td>56529.0</td>\n",
+       "      <td>67730.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Education Expenditures\n",
-       "Year                        \n",
-       "2004                  1039.0\n",
-       "2005                   937.0\n",
-       "2006                   894.0\n",
-       "2007                   937.0\n",
-       "2008                   960.0"
+       "      Los Angeles  San Francisco\n",
+       "Year                            \n",
+       "2004      55760.0        60992.0\n",
+       "2005      58404.0        66344.0\n",
+       "2006      60932.0        69559.0\n",
+       "2007      58404.0        66344.0\n",
+       "2008      56529.0        67730.0"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,9 +166,14 @@
     "        \"San Francisco\": df.iloc[5, 2], \"San Diego\": df.iloc[5, 3], \\\n",
     "        \"Seattle\": df.iloc[5, 4], \"Phoenix\": df.iloc[5, 5] }, ignore_index=True)\n",
     "    food = food.append({ \"Year\": str(itr), \\\n",
-    "        \"Food Expenditures\": df.iloc[10, 0]}, ignore_index=True)\n",
-    "    education = education.append({ \"Year\": str(itr), \\\n",
-    "        \"Education Expenditures\": df.iloc[38, 0]}, ignore_index=True)\n",
+    "        \"Los Angeles\": df.iloc[10, 1], \"San Francisco\": df.iloc[10, 2] }, ignore_index=True)\n",
+    "    education = education.append({ \"Year\": str(itr), \"Los Angeles\": df.iloc[38, 1], \\\n",
+    "        \"San Francisco\": df.iloc[38, 2]}, ignore_index=True)\n",
+    "    alcohol = alcohol.append({ \"Year\": str(itr), \\\n",
+    "        \"Los Angeles\": df.iloc[18, 1], \"San Francisco\": df.iloc[18, 2]}, ignore_index=True)\n",
+    "    average_expenditures = average_expenditures.append({ \"Year\": str(itr),\\\n",
+    "        \"Los Angeles\": df.iloc[9, 1],\\\n",
+    "        \"San Francisco\": df.iloc[9, 2]}, ignore_index=True)\n",
     "    itr += 1\n",
     "btax = btax.set_index(\"Year\", drop=True)\n",
     "ageref = ageref.set_index(\"Year\", drop=True)\n",
@@ -167,16 +181,18 @@
     "under18 = under18.set_index(\"Year\", drop=True)\n",
     "food = food.set_index(\"Year\", drop=True)\n",
     "education = education.set_index(\"Year\", drop=True)\n",
-    "education.head()"
+    "alcohol = alcohol.set_index(\"Year\", drop=True)\n",
+    "average_expenditures = average_expenditures.set_index(\"Year\", drop=True)\n",
+    "average_expenditures.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "education.to_csv(\"./data/education_west.csv\", sep='\\t')"
+    "average_expenditures.to_csv(\"./data/average_expenditures_west.csv\", sep='\\t')"
    ]
   },
   {
