Combine old and new materials.

--- a/data_joiner.ipynb
+++ b/data_joiner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,13 +66,13 @@
     "under18 = pd.DataFrame(columns=[\"Year\", \"Item\", \"Los Angeles\", \"San Francisco\", \"San Diego\", \"Seattle\", \"Phoenix\"])\n",
     "food = pd.DataFrame(columns=[\"Year\", \"Los Angeles\", \"San Francisco\"])\n",
     "education = pd.DataFrame(columns=[\"Year\", \"Los Angeles\", \"San Francisco\"])\n",
-    "alcohol = pd.DataFrame(columns=[\"Year\", \"Los Angeles\", \"San Francisco\"])\n",
-    "average_expenditures = pd.DataFrame(columns=[\"Year\", \"Los Angeles\", \"San Francisco\"])"
+    "alcohol = pd.DataFrame(columns=[\"Year\", \"Los Angeles\", \"San Francisco\", \"San Diego\", \"Seattle\", \"Phoenix\"])\n",
+    "average_expenditures = pd.DataFrame(columns=[\"Year\", \"Los Angeles\", \"San Francisco\", \"San Diego\", \"Seattle\", \"Phoenix\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -98,9 +98,15 @@
        "      <th></th>\n",
        "      <th>Los Angeles</th>\n",
        "      <th>San Francisco</th>\n",
+       "      <th>San Diego</th>\n",
+       "      <th>Seattle</th>\n",
+       "      <th>Phoenix</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -108,44 +114,59 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2004</th>\n",
-       "      <td>55760.0</td>\n",
-       "      <td>60992.0</td>\n",
+       "      <td>485.0</td>\n",
+       "      <td>628.0</td>\n",
+       "      <td>613.0</td>\n",
+       "      <td>526.0</td>\n",
+       "      <td>781.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2005</th>\n",
-       "      <td>58404.0</td>\n",
-       "      <td>66344.0</td>\n",
+       "      <td>475.0</td>\n",
+       "      <td>757.0</td>\n",
+       "      <td>755.0</td>\n",
+       "      <td>752.0</td>\n",
+       "      <td>693.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006</th>\n",
-       "      <td>60932.0</td>\n",
-       "      <td>69559.0</td>\n",
+       "      <td>543.0</td>\n",
+       "      <td>888.0</td>\n",
+       "      <td>520.0</td>\n",
+       "      <td>570.0</td>\n",
+       "      <td>645.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2007</th>\n",
-       "      <td>58404.0</td>\n",
-       "      <td>66344.0</td>\n",
+       "      <td>475.0</td>\n",
+       "      <td>757.0</td>\n",
+       "      <td>755.0</td>\n",
+       "      <td>752.0</td>\n",
+       "      <td>693.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2008</th>\n",
-       "      <td>56529.0</td>\n",
-       "      <td>67730.0</td>\n",
+       "      <td>504.0</td>\n",
+       "      <td>714.0</td>\n",
+       "      <td>647.0</td>\n",
+       "      <td>839.0</td>\n",
+       "      <td>503.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Los Angeles  San Francisco\n",
-       "Year                            \n",
-       "2004      55760.0        60992.0\n",
-       "2005      58404.0        66344.0\n",
-       "2006      60932.0        69559.0\n",
-       "2007      58404.0        66344.0\n",
-       "2008      56529.0        67730.0"
+       "      Los Angeles  San Francisco  San Diego  Seattle  Phoenix\n",
+       "Year                                                         \n",
+       "2004        485.0          628.0      613.0    526.0    781.0\n",
+       "2005        475.0          757.0      755.0    752.0    693.0\n",
+       "2006        543.0          888.0      520.0    570.0    645.0\n",
+       "2007        475.0          757.0      755.0    752.0    693.0\n",
+       "2008        504.0          714.0      647.0    839.0    503.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,14 +187,22 @@
     "        \"San Francisco\": df.iloc[5, 2], \"San Diego\": df.iloc[5, 3], \\\n",
     "        \"Seattle\": df.iloc[5, 4], \"Phoenix\": df.iloc[5, 5] }, ignore_index=True)\n",
     "    food = food.append({ \"Year\": str(itr), \\\n",
-    "        \"Los Angeles\": df.iloc[10, 1], \"San Francisco\": df.iloc[10, 2] }, ignore_index=True)\n",
+    "        \"Los Angeles\": df.iloc[10, 1], \"San Francisco\": df.iloc[10, 2],\\\n",
+    "        \"San Diego\": df.iloc[10, 3], \"Seattle\": df.iloc[10,4], \"Phoenix\": df.iloc[10,5]},\\\n",
+    "        ignore_index=True)\n",
     "    education = education.append({ \"Year\": str(itr), \"Los Angeles\": df.iloc[38, 1], \\\n",
-    "        \"San Francisco\": df.iloc[38, 2]}, ignore_index=True)\n",
+    "        \"San Francisco\": df.iloc[38, 2],\\\n",
+    "        \"San Diego\": df.iloc[38, 3], \"Seattle\": df.iloc[38,4], \"Phoenix\": df.iloc[38,5]},\\\n",
+    "        ignore_index=True)\n",
     "    alcohol = alcohol.append({ \"Year\": str(itr), \\\n",
-    "        \"Los Angeles\": df.iloc[18, 1], \"San Francisco\": df.iloc[18, 2]}, ignore_index=True)\n",
+    "        \"Los Angeles\": df.iloc[18, 1], \"San Francisco\": df.iloc[18, 2],\\\n",
+    "        \"San Diego\": df.iloc[18, 3], \"Seattle\": df.iloc[18,4], \"Phoenix\": df.iloc[18,5]},\\\n",
+    "        ignore_index=True)\n",
     "    average_expenditures = average_expenditures.append({ \"Year\": str(itr),\\\n",
     "        \"Los Angeles\": df.iloc[9, 1],\\\n",
-    "        \"San Francisco\": df.iloc[9, 2]}, ignore_index=True)\n",
+    "        \"San Francisco\": df.iloc[9, 2],\\\n",
+    "        \"San Diego\": df.iloc[9, 3], \"Seattle\": df.iloc[9,4], \"Phoenix\": df.iloc[9,5]},\\\n",
+    "        ignore_index=True)\n",
     "    itr += 1\n",
     "btax = btax.set_index(\"Year\", drop=True)\n",
     "ageref = ageref.set_index(\"Year\", drop=True)\n",
@@ -183,16 +212,16 @@
     "education = education.set_index(\"Year\", drop=True)\n",
     "alcohol = alcohol.set_index(\"Year\", drop=True)\n",
     "average_expenditures = average_expenditures.set_index(\"Year\", drop=True)\n",
-    "average_expenditures.head()"
+    "alcohol.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "average_expenditures.to_csv(\"./data/average_expenditures_west.csv\", sep='\\t')"
+    "alcohol.to_csv(\"./data/alcohol_west.csv\", sep='\\t')"
    ]
   },
   {
