--- a/DataVisHW2.ipynb
+++ b/DataVisHW2.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -101,6 +101,7 @@
     "\n",
     "ax4.set_title(\"Percent Renewable Energy Produced\")\n",
     "\n",
+    "plt.savefig('selected.png', dpi=500)\n",
     "plt.show()"
    ]
   },
