--- a/DataVisHw1.ipynb
+++ b/DataVisHw1.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Homework 2\n",
+    "Dalton Caron\n",
+    "\n",
+    "Montana Technological University\n",
+    "\n",
+    "CSCI444 Data Visualization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 253,
    "metadata": {},
@@ -1000,7 +1012,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
